<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.volcengine</groupId>
    <version>2.0.1-SNAPSHOT</version>
    <artifactId>example</artifactId>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jre.version>1.8</jre.version>
        <skipTests>true</skipTests>
        <dep.maven-surefire-plugin.version>2.9</dep.maven-surefire-plugin.version>
        <httpcomponents.version>4.5.2</httpcomponents.version>
        <fastjson.version>1.2.58</fastjson.version>
        <lombok.version>1.16.22</lombok.version>
        <commons-lang3.version>3.10</commons-lang3.version>
        <protobuf.version>3.19.4</protobuf.version>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.volcengine</groupId>
            <artifactId>volc-sdk-java</artifactId>
            <version>2.0.1-SNAPSHOT</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.5.1</version>
                <configuration>
                    <source>${jre.version}</source>
                    <target>${jre.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
